// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SessionListHeader /> > renders a basic header 1`] = `
<div>
  <div
    style="width: 378px;"
  >
    <header
      class="_sessionListHeader_5d8138"
    >
      <h5
        class="_typography_yh5dq_162 _font-body-lg-semibold_yh5dq_83 _title_5d8138"
      >
        Apps
      </h5>
    </header>
  </div>
</div>
`;

exports[`<SessionListHeader /> > renders a header with actions 1`] = `
<div>
  <div
    style="width: 378px;"
  >
    <header
      class="_sessionListHeader_5d8138"
    >
      <h5
        class="_typography_yh5dq_162 _font-body-lg-semibold_yh5dq_83 _title_5d8138"
      >
        Apps
      </h5>
      <button
        class="_button_dyfp8_17 _destructive_dyfp8_99"
        data-kind="secondary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        End sessions
      </button>
    </header>
  </div>
</div>
`;
